[UPDATE] Updated the events app
- Inside of the settings, I changed the MEDIA_ROOT and MEDIA_URL to use
  'media_files' as the base folder for storing media files such as fliers.
  Also created a FLIERS_PATH variable for use in different files such as
  in the event model's file for the 'get_path_for_flier' function.
- Changed some of the documentation inside of the forms.py file
- Updated ModelTestCase to use tempdir as well as changes the settings.MEDIA_ROOT
  variable so that files can saved in a temporary directory so that files don't
  interact with where all of the media files that aren't used for tests.
- Updated ViewTestCase so that code coverage is better.
- Updated documentation inside of views file
- Added coverage module to the requirements file

--- a/ACM_General/events/templates/events/create-event.html
+++ b/ACM_General/events/templates/events/create-event.html
@@ -63,8 +63,7 @@
         // Adds the datetime picker "flatpickr"
         var flatpickr_calendar = new flatpickr("#calendar", {
                 enableTime: true, // Adds time to be chosen by user
-                altInput: true,   // Changes the way the datetime is displayed to the user (looks nicer)
-                utc: true         // Dates are parsed, formatted, and displayed in UTC
+                altInput: true   // Changes the way the datetime is displayed to the user (looks nicer)
             }
         );
 
