--- a/ACM_General/core/templates/404.html
+++ b/ACM_General/core/templates/404.html
@@ -40,16 +40,8 @@
     {% endblock %}
 
     {% block head_stylesheets %}
-    <link rel="stylesheet" href="{% static "/home/css/404.css" %}" />
-    {% endblock %}
-
-    {% block head_javascript %}
-    {% endblock %}
-
-    {% block head_extra-descriptors %}
-    {% endblock %}
-
-    {% block head_fonts %}
+      <link rel="stylesheet" href="{% static "/home/css/main.css" %}">
+      <link rel="stylesheet" href="{% static "/home/css/404.css" %}" />
     {% endblock %}
 
     {% block head_title %}
@@ -76,8 +68,8 @@
     <div class="bottom-content">
         <div class="container">
             <h2>Where ever you were going, you didn't make it.</h2>
-            <a href="{% url "home:index" %}">Home</a>
-            <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">Ask Someone</a>
+            <a href="{% url "home:index" %}" class="acm-btn">Home</a>
+            <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top" class="acm-btn">Ask Someone</a>
         </div>
     </div>
 {% endblock %}
