--- a/ACM_General/home/static/home/css/media.css
+++ b/ACM_General/home/static/home/css/media.css
@@ -1,11 +1,20 @@
-footer {
-    display: none;
+.nav-media a span {
+  color: #4d4d4d !important;
+}
+
+.nav-media:hover a span {
+  color: #4d4d4d !important;
+}
+
+.nav-media:after {
+  transform: scaleX(.8);
 }
 
 .m-p-g {
   max-width: 100%;
   margin: 0 auto;
 }
+
 .m-p-g__thumbs-img {
   padding: 4px;
   margin: 0;
@@ -22,19 +31,24 @@ footer {
   -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .m-p-g__thumbs-img.active {
   z-index: 50;
 }
+
 .m-p-g__thumbs-img.layout-completed {
   opacity: 1;
 }
+
 .m-p-g__thumbs-img.hide {
   opacity: 0;
 }
+
 .m-p-g__thumbs-img:hover {
   -webkit-filter: brightness(107%);
   filter: brightness(107%);
 }
+
 .m-p-g__fullscreen {
   position: fixed;
   z-index: 10;
@@ -52,12 +66,14 @@ footer {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .m-p-g__fullscreen.active {
   -webkit-transition: background .25s ease-out, visibility .01s 0s linear;
   transition: background .25s ease-out, visibility .01s 0s linear;
   visibility: visible;
   background: rgba(0, 0, 0, 0.95);
 }
+
 .m-p-g__fullscreen-img {
   pointer-events: none;
   position: absolute;
@@ -72,6 +88,7 @@ footer {
   -webkit-transition: opacity 0.5s ease-out;
   transition: opacity 0.5s ease-out;
 }
+
 .m-p-g__fullscreen-img.active {
   visibility: visible;
   opacity: 1 !important;
@@ -80,11 +97,13 @@ footer {
   transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.5s ease-out;
   transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.5s ease-out, -webkit-transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .m-p-g__fullscreen-img.almost-active {
   opacity: 0;
   -webkit-transform: translate3d(0, 0, 0) !important;
   transform: translate3d(0, 0, 0) !important;
 }
+
 .m-p-g__controls {
   position: fixed;
   top: 0;
@@ -97,12 +116,14 @@ footer {
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-          transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .m-p-g__controls.active {
   opacity: 1;
   visibility: visible;
 }
+
 .m-p-g__controls-close, .m-p-g__controls-arrow {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -110,9 +131,11 @@ footer {
   border: none;
   background: none;
 }
+
 .m-p-g__controls-close:focus, .m-p-g__controls-arrow:focus {
   outline: none;
 }
+
 .m-p-g__controls-arrow {
   position: absolute;
   z-index: 1;
@@ -129,9 +152,11 @@ footer {
   -webkit-tap-highlight-color: transparent;
   opacity: 0;
 }
+
 .m-p-g__controls-arrow:hover {
   opacity: 1;
 }
+
 .m-p-g__controls-arrow--prev {
   left: 0;
   padding-left: 3vw;
@@ -139,6 +164,7 @@ footer {
   -ms-flex-pack: start;
   justify-content: flex-start;
 }
+
 .m-p-g__controls-arrow--next {
   right: 0;
   padding-right: 3vw;
@@ -146,6 +172,7 @@ footer {
   -ms-flex-pack: end;
   justify-content: flex-end;
 }
+
 .m-p-g__controls-close {
   position: absolute;
   top: 3vh;
@@ -154,6 +181,7 @@ footer {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
 }
+
 .m-p-g__btn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -171,9 +199,11 @@ footer {
   -webkit-transition: all .25s ease-out;
   transition: all .25s ease-out;
 }
+
 .m-p-g__btn:hover {
   background: rgba(255, 255, 255, 0.15);
 }
+
 .m-p-g__alertBox {
   position: fixed;
   z-index: 999;
@@ -189,6 +219,7 @@ footer {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
   color: grey;
 }
+
 .m-p-g__alertBox h2 {
   color: red;
 }
