--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -3,18 +3,18 @@
 {% load static %}
 
 {% block head_title %}
-    <title> ACM | Officers </title>
+  <title> ACM | Officers </title>
 {% endblock %}
 
 {% block head_stylesheets %}
-<link rel="stylesheet" href="{% static "/home/css/officers.css" %}" />
+  <link rel="stylesheet" href="{% static "/home/css/officers.css" %}"/>
 {% endblock %}
 
 {% block body_content %}
-	<div class="main-section">
-		<div class="content-wrapper">
-			<ul class="cards">
-            <!--<li class="cards__item">
+  <main>
+    <div class="content-wrapper">
+      <ul class="cards">
+        <!--<li class="cards__item">
             <div class="card">
                 <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
                 <div class="card__content">
@@ -35,40 +35,51 @@
                     <div class="card__title">Sercan Akcay | Vice President</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - ACM General</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
         </li> -->
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/officers/current/secretary.jpg" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Dalton Cole | Secretary, SIG-Comp Chair</div>
-                    <p class="card__text">Year - PhD<br>Length of Service - 3 Years<br>SIG - ACM General, SIG-Comp</p>
-                    <div class="link_zone">
-                        <a href="https://github.com/drc14" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://www.linkedin.com/in/daltoncole1/" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="mailto:drcgy5@mst.edu" class="btn btn--block card__btn">Email</a>
-                    </div>
-                </div>
+          <div class="card">
+            <div class="card__image"
+                 style="background-image: url({% static "home/img/officers/current/secretary.jpg" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Dalton Cole | Secretary, SIG-Comp Chair
+              </div>
+              <p class="card__text">Year - PhD<br>Length of Service - 3
+                Years<br>SIG - ACM General, SIG-Comp</p>
+              <div class="link_zone">
+                <a href="https://github.com/drc14"
+                   class="acm-btn btn btn--block card__btn">GitHub</a>
+                <a href="https://www.linkedin.com/in/daltoncole1/"
+                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                <a href="mailto:drcgy5@mst.edu"
+                   class="acm-btn btn btn--block card__btn">Email</a>
+              </div>
             </div>
+          </div>
         </li>
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Henry Wong | Treasurer</div>
-                    <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - ACM General, SIG-Game</p>
-                    <div class="link_zone">
-                        <a href="https://github.com/henrycwong" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://linkedin/in/henrycwong" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="mailto:hcwqk7@mst.edu" class="btn btn--block card__btn">Email</a>
-                    </div>
-                </div>
+          <div class="card">
+            <div class="card__image"
+                 style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Henry Wong | Treasurer</div>
+              <p class="card__text">Year - Freshman<br>Length of Service - 3
+                Months<br>SIG - ACM General, SIG-Game</p>
+              <div class="link_zone">
+                <a href="https://github.com/henrycwong"
+                   class="acm-btn btn btn--block card__btn">GitHub</a>
+                <a href="https://linkedin/in/henrycwong"
+                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                <a href="mailto:hcwqk7@mst.edu"
+                   class="acm-btn btn btn--block card__btn">Email</a>
+              </div>
             </div>
+          </div>
         </li>
         <!--<li class="cards__item">
             <div class="card">
@@ -85,18 +96,25 @@
             </div>
         </li>-->
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Kevin Schoonover | SIG.com Chair, System Administrator</div>
-                    <p class="card__text">Year - Freshman<br>Length of Service - 6 Months<br>SIG - SIG.com, ACM-General</p>
-                    <div class="link_zone">
-                        <a href="https://github.com/kevinschoonover" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://www.linkedin.com/in/schoonoverkevin/" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="mailto:ksyh3@mst.edu" class="btn btn--block card__btn">Email</a>
-                    </div>
-                </div>
+          <div class="card">
+            <div class="card__image"
+                 style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Kevin Schoonover | SIG.com Chair, System
+                Administrator
+              </div>
+              <p class="card__text">Year - Freshman<br>Length of Service - 6
+                Months<br>SIG - SIG.com, ACM-General</p>
+              <div class="link_zone">
+                <a href="https://github.com/kevinschoonover"
+                   class="acm-btn btn btn--block card__btn">GitHub</a>
+                <a href="https://www.linkedin.com/in/schoonoverkevin/"
+                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                <a href="mailto:ksyh3@mst.edu"
+                   class="acm-btn btn btn--block card__btn">Email</a>
+              </div>
             </div>
+          </div>
         </li>
         <!--<li class="cards__item">
             <div class="card">
@@ -105,9 +123,9 @@
                     <div class="card__title">Joseph Kuhn | SIG-Game Chair</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG Game</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
@@ -119,18 +137,18 @@
                     <div class="card__title">Cody Roberts | SIG-Lounge Chair</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG-Lounge</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">GitHub</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">LinkedIn</a>
+                        <a href="https://acm.mst.edu/404" class="acm-btn btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
         </li>-->
-    </ul>
-{#            This a tag below should expand and make more info about past officers appear#}
-{#            <a href="#" class="past_officers">#}
-{#                Past Officers#}
-{#            </a>#}
-		</div>
-	</div>
+      </ul>
+      {#            This a tag below should expand and make more info about past officers appear#}
+      {#            <a href="#" class="past_officers">#}
+      {#                Past Officers#}
+      {#            </a>#}
+    </div>
+  </main>
 {% endblock %}
