--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -3,64 +3,92 @@
 {% load static %}
 
 {% block head_title %}
-<title> ACM | Sponsors </title>
+  <title> ACM | Sponsors </title>
 {% endblock %}
 
 {% block head_stylesheets %}
-<link rel="stylesheet" href="{% static "/home/css/sponsors.css" %}" />
+  <link rel="stylesheet" href="{% static "/home/css/sponsors.css" %}"/>
 {% endblock %}
 
 {% block body_content %}
-<div class="main-section">
+  <main>
     <div class="content-wrapper sponsor-header-content-wrapper">
-        <h1 style="text-align:center;"> Thank you to our sponsors! </h1>
-        <h2 style="text-align:center; color:rgba(0,0,0,0.54);"> Contact <a style="color:rgba(0,0,160,54);" href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> to become one!</h2>
+      <h1 style="text-align:center; color:rgba(0, 0, 0, .87);"> Thank you to our
+        sponsors! </h1>
+      <h2
+        style="text-align:center; color:rgba(0, 0, 0, .70); font-weight: normal">
+        Contact <a style="color:#2da1d8;"
+                   href="mailto:acm@mst.com?Subject=ACM Sponsorship"
+                   target="_top">acm@mst.edu</a> to become one!</h2>
     </div>
 
 
     <div class="content-wrapper">
-    <ul class="cards">
+      <ul class="cards">
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image contain" style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Tradebot | Sponsor</div>
-                    <p class="card__text">Tradebot Systems, Inc. is one of the largest high-frequency, computer trading firms in the US. Based in Kansas City, Missouri, they regularly account for 5% of the total trading volume in the US stock market.</p>
-                    <a href="http://tradebot.com/" class="btn btn--block card__btn">Learn More</a>
-                </div>
+          <div class="card">
+            <div class="card__image contain"
+                 style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Tradebot | Sponsor</div>
+              <p class="card__text">Tradebot Systems, Inc. is one of the largest
+                high-frequency, computer trading firms in the US. Based in
+                Kansas City, Missouri, they regularly account for 5% of the
+                total trading volume in the US stock market.</p>
+              <a href="http://tradebot.com/"
+                 class="acm-btn btn btn--block card__btn">Learn More</a>
             </div>
+          </div>
         </li>
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Garmin | Sponsor</div>
-                    <p class="card__text">Garmin Ltd. (shortened to Garmin) is an American multinational technology company known for its specialization in GPS technology development for its use in automotive, aviation, marine, outdoor, and sport activities and utilities.</p>
-                    <a href="https://www.garmin.com/" class="btn btn--block card__btn">Learn More</a>
-                </div>
+          <div class="card">
+            <div class="card__image"
+                 style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Garmin | Sponsor</div>
+              <p class="card__text">Garmin Ltd. (shortened to Garmin) is an
+                American multinational technology company known for its
+                specialization in GPS technology development for its use in
+                automotive, aviation, marine, outdoor, and sport activities and
+                utilities.</p>
+              <a href="https://www.garmin.com/"
+                 class="acm-btn btn btn--block card__btn">Learn More</a>
             </div>
+          </div>
         </li>
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image contain" style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">AT&T | Donor</div>
-                    <p class="card__text">AT&T Inc. is an American multinational telecommunications conglomerate. AT&T is the second largest provider of mobile telephone services and the largest provider of fixed telephone services in the United States, and also provides broadband subscription television services through DirecTV.</p>
-                    <a href="https://www.att.com/" class="btn btn--block card__btn">Learn More</a>
-                </div>
+          <div class="card">
+            <div class="card__image contain"
+                 style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %})"></div>
+            <div class="card__content">
+              <div class="card__title">AT&T | Donor</div>
+              <p class="card__text">AT&T Inc. is an American multinational
+                telecommunications conglomerate. AT&T is the second largest
+                provider of mobile telephone services and the largest provider
+                of fixed telephone services in the United States, and also
+                provides broadband subscription television services through
+                DirecTV.</p>
+              <a href="https://www.att.com/"
+                 class="acm-btn btn btn--block card__btn">Learn More</a>
             </div>
+          </div>
         </li>
         <li class="cards__item">
-            <div class="card">
-                <div class="card__image" style="background-image: url({% static "home/img/sponsors/up_logo.gif" %})"></div>
-                <div class="card__content">
-                    <div class="card__title">Union Pacific | Contributor</div>
-                    <p class="card__text">The Union Pacific Railroad is a freight hauling railroad that operates 8,500 locomotives over 32,100 route-miles in 23 states west of Chicago, Illinois and New Orleans, Louisiana.</p>
-                    <a href="https://www.up.com/" class="btn btn--block card__btn">Learn More</a>
-                </div>
+          <div class="card">
+            <div class="card__image"
+                 style="background-image: url({% static "home/img/sponsors/up_logo.gif" %})"></div>
+            <div class="card__content">
+              <div class="card__title">Union Pacific | Contributor</div>
+              <p class="card__text">The Union Pacific Railroad is a freight
+                hauling railroad that operates 8,500 locomotives over 32,100
+                route-miles in 23 states west of Chicago, Illinois and New
+                Orleans, Louisiana.</p>
+              <a href="https://www.up.com/"
+                 class="acm-btn btn btn--block card__btn">Learn More</a>
             </div>
+          </div>
         </li>
-    </ul>
+      </ul>
     </div>
-</div>
+  </main>
 {% endblock %}
