--- a/ACM_General/home/static/home/css/membership.css
+++ b/ACM_General/home/static/home/css/membership.css
@@ -1,3 +1,5 @@
+/* TODO: Add documentation on semantic class naming http://getbem.com/ */
+
 .perks-header {
   text-align: center;
   font-weight: normal;
