CHANGED color of footer, made the buttons work with stripe on membership, fixed mobile, and renamed 1/2 of all base.html files. ADDED newer version of footer image.

--- a/ACM_General/core/templates/core/wireframe.html
+++ b/ACM_General/core/templates/core/wireframe.html
@@ -38,7 +38,7 @@
     {% block head_extra-descriptors %}{% endblock %}
     {% block head_fonts %}{% endblock %}
     {% block head_title %}
-      <title> ACM | General </title>{% endblock %}{% endblock %}
+      <title> ACM </title>{% endblock %}{% endblock %}
   {% block head_main %}{% endblock %}
 </head>
 
