--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "core/wireframe.html" %}
 
 {% block body_main %}
     <p> Current Time is {{ currentTime }} </p>
