--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -213,6 +213,7 @@ nav {
   /* Allocate space */
   height: 90px;
   width: 92vw;
+  overflow: hidden;
   min-width: 1000px;
   /* Formatting */
   position: relative;
@@ -250,6 +251,8 @@ nav .nav-link-wrapper {
 .nav-button:after {
   transition: all .25s ease-in-out;
   display: block;
+  position: relative;
+  top: -3px;
   content: '';
   transform: scaleX(.40);
   border-bottom: solid 3px #2da1d8;
@@ -257,6 +260,7 @@ nav .nav-link-wrapper {
 
 .nav-button:hover:after {
   transform: scaleX(1);
+  border-bottom: solid 3px #76d3ab;
 }
 
 .nav-button a {
@@ -393,7 +397,7 @@ main {
   position: relative;
   z-index: 0;
   margin-top: -45px;
-  padding-top: 75px;
+  padding-top: 65px;
   -webkit-box-shadow: 0 0 20px 10px rgba(0, 0, 0, .30);
   -moz-box-shadow: 0 0 20px 10px rgba(0, 0, 0, .30);
   box-shadow: 0 0 20px 10px rgba(0, 0, 0, .30);
@@ -401,6 +405,7 @@ main {
 }
 
 .acm-btn {
+  cursor: pointer;
   background: #76d3ab; /* Old browsers */
   background: -moz-linear-gradient(top, #76d3ab 0%, #76d3ab 90%, #65b593 90%, #65b593 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #76d3ab 0%, #76d3ab 90%, #65b593 90%, #65b593 100%); /* Chrome10-25,Safari5.1-6 */
@@ -419,16 +424,16 @@ main {
 footer {
   position: relative;
   z-index: 10;
-  height: 270px;
+  height: 220px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
+  background-color: #373C3F;
 }
 
 footer img {
   margin: 5px 0;
-  height: 125px;
+  height: 110px;
 }
 
 .footer-nav {
@@ -443,11 +448,15 @@ footer img {
   margin: 0 2%;
   font-size: 14px;
   text-decoration: none;
-  color: #5f5f5f;
+  color: rgba(255,255,255,.8);
+  transition: color .25s;
+}
+.footer-nav a:hover {
+  color: rgba(255,255,255,1);
 }
 
 footer h5 {
-  color: #4d4d4d;
+  color: rgba(255,255,255,.6);
   font-size: 14px;
   font-weight: normal;
 }
@@ -592,10 +601,19 @@ footer h5 {
   
   main {
     margin-top: 0;
+    padding-top: 10px;
+  }
+  
+  main::before {
+    display: block !important;
+    content: '';
+    position: relative;
+    top: -12px;
+    border-top: solid 4px #2da1d8;
   }
 }
 
-/*@media (max-width:961px)  { !* tablet, landscape iPad, lo-res laptops ands desktops *! }*/
+/*@media (max-width:961px)  { !* tablet, landscape iPad, low-res laptops ands desktops *! }*/
 @media (max-width: 1090px) {
   /* big landscape tablets, laptops, and desktops */
   body {
