--- a/ACM_General/home/static/home/css/officers.css
+++ b/ACM_General/home/static/home/css/officers.css
@@ -32,8 +32,6 @@
 
 .btn {
   padding: 8px 0;
-  /*font-size: .9em;*/
-  /*padding-left: 22px;*/
 }
 
 .btn--block {
@@ -57,12 +55,9 @@
 }
 
 .card {
-  background-color: #f1f1f1;
-  /*border-radius: 0.25rem;*/
-  /*box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);*/
+  /*background-color: #f1f1f1;*/
   display: flex;
   flex-direction: row;
-/ / overflow: hidden;
   max-height: 270px;
   width: 100%;
 }
@@ -79,33 +74,12 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  /*border-top-left-radius: 0.25rem;*/
-  /*border-top-right-radius: 0.25rem;*/
   filter: contrast(70%);
-/ / filter: saturate(180 %);
   overflow: hidden;
   position: relative;
-  transition: filter 0.5s cubic-bezier(.43, .41, .22, .91);
   max-width: 155px;
   min-width: 155px;
   height: 100%;
-}
-
-.contain {
-  /*background-size:contain;*/
-}
-
-.card__image::before {
-  /*//content: "";
-  //display: block;
-  padding-top: 70%; // 16:9 aspect ratio*/
-}
-
-.card__title {
-  /*color: black;
-  font-size: 1.25rem;
-  font-weight: 300;
-  letter-spacing: 1px;*/
 }
 
 .card__text {
@@ -119,7 +93,6 @@
   height: 46px;
   background-color: rgba(233, 101, 76, .5);
   margin: 0 1rem;
-  /*border-radius: 4px 4px 0 0;*/
   cursor: pointer;
   transition: background-color .1s;
   display: flex;
