--- a/ACM_General/home/templates/home/membership.html
+++ b/ACM_General/home/templates/home/membership.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block head_title %}
+  <title> ACM | Membership </title>
+{% endblock %}
+
 {% block head_stylesheets %}
   <link rel="stylesheet" href="{% static "/home/css/membership.css" %}"/>
 {% endblock %}
@@ -41,15 +45,19 @@
           <h1 class="pay-area__title">Semester</h1>
           <div class="pay-area__price">11</div>
           <div class="pay-area__disclaimer">all perks are included</div>
-          <a href="#" class="acm-btn pay-area__btn pay-area__btn--semester">Buy
-            Semester</a>
+          <form id="semester-button" class="acm-btn pay-area__btn pay-area__btn--semester" action="{% url 'payments:product-handler' 1100 %}" method="POST">
+            {% csrf_token %}
+            Buy Semester
+          </form>
         </div>
         <div class="pay-area__card">
           <h1 class="pay-area__title">Year</h1>
           <div class="pay-area__price">20</div>
           <div class="pay-area__disclaimer">all perks are included</div>
-          <a href="#" class="acm-btn pay-area__btn pay-area__btn--year">Buy
-            Year</a>
+          <form id="year-button" class="acm-btn pay-area__btn pay-area__btn--year" action="{% url 'payments:product-handler' 1100 %}" method="POST">
+            {% csrf_token %}
+            Buy Year
+          </form>
         </div>
       </div>
     </div>
@@ -93,4 +101,45 @@
       </div>
     </div>
   </main>
+
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+          <script>
+            var handler = StripeCheckout.configure({
+              key: 'pk_test_0FfWE5qxj6yqPUHQU1noRevQ',
+              image: '{% static 'home/img/core/acm.png' %}',
+              locale: 'auto',
+              token: function(token) {
+                // You can access the token ID with `token.id`.
+                // Get the token ID to your server-side code for use.
+              }
+            });
+
+            document.getElementById('semester-button').addEventListener('click', function(e) {
+              // Open Checkout with further options:
+              handler.open({
+                name: 'Missouri S&T - Association of Computing Machinery',
+                description: 'Semester Membership',
+                zipCode: true,
+                amount: 1100
+              });
+              e.preventDefault();
+            });
+
+            document.getElementById('year-button').addEventListener('click', function(e) {
+              // Open Checkout with further options:
+              handler.open({
+                name: 'Missouri S&T - Association of Computing Machinery',
+                description: 'Year Membership',
+                zipCode: true,
+                amount: 2000
+              });
+              e.preventDefault();
+            });
+
+            // Close Checkout on page navigation:
+            window.addEventListener('popstate', function() {
+              handler.close();
+            });
+          </script>
+
 {% endblock %}
