--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -1,11 +1,9 @@
 {% extends 'home/base.html' %}
-
 {% load static %}
 
 {% block head_title %}
   <title> ACM | Sponsors </title>
 {% endblock %}
-
 {% block head_stylesheets %}
   <link rel="stylesheet" href="{% static "/home/css/sponsors.css" %}"/>
 {% endblock %}
@@ -36,7 +34,7 @@
                 Kansas City, Missouri, they regularly account for 5% of the
                 total trading volume in the US stock market.</p>
               <a href="http://tradebot.com/"
-                 class="acm-btn btn btn--block card__btn">Learn More</a>
+                 class="acm-btn card__btn">Learn More</a>
             </div>
           </div>
         </li>
