--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -350,7 +350,7 @@ label:focus {
 }
 
 .menu ul li a:hover, .menu ul li label:hover {
-  color: #E9654C;
+  color: #76d3ab;
   background-color: #f0f0f0;
 }
 
@@ -405,16 +405,22 @@ main {
 }
 
 .acm-btn {
+  display: inline-block;
   cursor: pointer;
-  background: #76d3ab; /* Old browsers */
-  background: -moz-linear-gradient(top, #76d3ab 0%, #76d3ab 90%, #65b593 90%, #65b593 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #76d3ab 0%, #76d3ab 90%, #65b593 90%, #65b593 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #76d3ab 0%, #76d3ab 90%, #65b593 90%, #65b593 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#76d3ab', endColorstr='#65b593', GradientType=0); /* IE6-9 */
-  color: white;
+  background: #76d3ab;
+ color: white;
   text-align: center;
-  padding: 8px 20px;
+  height: 38px;
+  line-height: 38px;
+  padding: 0 20px;
   text-decoration: none;
+  
+  box-shadow: inset 0 -4px 0 0 #65b593;
+  
+  transition: .3s ease-in-out;
+}
+.acm-btn:hover {
+  box-shadow: inset 0 -40px 0 0 #65b593;
 }
 
 /* =========================================================================
