--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -1,11 +1,9 @@
 {% extends 'home/base.html' %}
-
 {% load static %}
 
 {% block head_title %}
   <title> ACM | Officers </title>
 {% endblock %}
-
 {% block head_stylesheets %}
   <link rel="stylesheet" href="{% static "/home/css/officers.css" %}"/>
 {% endblock %}
@@ -44,40 +42,50 @@
         </li> -->
         <li class="cards__item">
           <div class="card">
-            <div class="card__image"
-                 style="background-image: url({% static "home/img/officers/current/secretary.jpg" %})"></div>
+
             <div class="card__content">
-              <div class="card__title">Dalton Cole | Secretary, SIG-Comp Chair
+              <div class="card__image"
+                   style="background-image: url({% static "home/img/officers/current/secretary.jpg" %})"></div>
+
+              <div class="card__text">
+                <h5 class="card__title">Dalton Cole | Secretary, SIG-Comp
+                  Chair</h5>
+                Year - PhD<br>
+                Length of Service - 3 Years<br>
+                SIG - ACM General, SIG-Comp
               </div>
-              <p class="card__text">Year - PhD<br>Length of Service - 3
-                Years<br>SIG - ACM General, SIG-Comp</p>
-              <div class="link_zone">
-                <a href="https://github.com/drc14"
-                   class="acm-btn btn btn--block card__btn">GitHub</a>
-                <a href="https://www.linkedin.com/in/daltoncole1/"
-                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
-                <a href="mailto:drcgy5@mst.edu"
-                   class="acm-btn btn btn--block card__btn">Email</a>
-              </div>
+            </div>
+            <div class="link_zone">
+              <a href="https://github.com/drc14"
+                 class="acm-btn btn">GitHub</a>
+              <a href="https://www.linkedin.com/in/daltoncole1/"
+                 class="acm-btn btn">LinkedIn</a>
+              <a href="mailto:drcgy5@mst.edu"
+                 class="acm-btn btn">Email</a>
             </div>
           </div>
         </li>
         <li class="cards__item">
           <div class="card">
-            <div class="card__image"
-                 style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})"></div>
+
             <div class="card__content">
-              <div class="card__title">Henry Wong | Treasurer</div>
-              <p class="card__text">Year - Freshman<br>Length of Service - 3
-                Months<br>SIG - ACM General, SIG-Game</p>
-              <div class="link_zone">
-                <a href="https://github.com/henrycwong"
-                   class="acm-btn btn btn--block card__btn">GitHub</a>
-                <a href="https://linkedin/in/henrycwong"
-                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
-                <a href="mailto:hcwqk7@mst.edu"
-                   class="acm-btn btn btn--block card__btn">Email</a>
+              <div class="card__image"
+                   style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})"></div>
+
+              <div class="card__text">
+                <h5 class="card__title">Henry Wong | Treasurer</h5>
+                Year - Freshman<br>
+                Length of Service - 3 Months<br>
+                SIG - ACM General, SIG-Game
               </div>
+            </div>
+            <div class="link_zone">
+              <a href="https://github.com/henrycwong"
+                 class="acm-btn btn">GitHub</a>
+              <a href="https://linkedin/in/henrycwong"
+                 class="acm-btn btn">LinkedIn</a>
+              <a href="mailto:hcwqk7@mst.edu"
+                 class="acm-btn btn">Email</a>
             </div>
           </div>
         </li>
@@ -97,23 +105,30 @@
         </li>-->
         <li class="cards__item">
           <div class="card">
-            <div class="card__image"
-                 style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})"></div>
+
             <div class="card__content">
-              <div class="card__title">Kevin Schoonover | SIG.com Chair, System
-                Administrator
-              </div>
-              <p class="card__text">Year - Freshman<br>Length of Service - 6
-                Months<br>SIG - SIG.com, ACM-General</p>
-              <div class="link_zone">
-                <a href="https://github.com/kevinschoonover"
-                   class="acm-btn btn btn--block card__btn">GitHub</a>
-                <a href="https://www.linkedin.com/in/schoonoverkevin/"
-                   class="acm-btn btn btn--block card__btn">LinkedIn</a>
-                <a href="mailto:ksyh3@mst.edu"
-                   class="acm-btn btn btn--block card__btn">Email</a>
+              <div class="card__image"
+                   style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})"></div>
+
+              <div class="card__text">
+                <h5 class="card__title">Kevin Schoonover | SIG.com Chair,
+                  System
+                  Administrator
+                </h5>
+                Year - Freshman<br>
+                Length of Service - 6 Months<br>
+                SIG - SIG.com, ACM-General
               </div>
             </div>
+            <div class="link_zone">
+              <a href="https://github.com/kevinschoonover"
+                 class="acm-btn btn btn--block card__btn">GitHub</a>
+              <a href="https://www.linkedin.com/in/schoonoverkevin/"
+                 class="acm-btn btn btn--block card__btn">LinkedIn</a>
+              <a href="mailto:ksyh3@mst.edu"
+                 class="acm-btn btn btn--block card__btn">Email</a>
+            </div>
+
           </div>
         </li>
         <!--<li class="cards__item">
